// common.proto - 通用数据类型定义
syntax = "proto3";

package isa.common;

option go_package = "github.com/isa-cloud/isa_cloud/pkg/proto/common";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// ========================================
// 通用响应结构
// ========================================

message BaseResponse {
    bool success = 1;
    string message = 2;
    string error_code = 3;
    string error_message = 4;
    google.protobuf.Timestamp timestamp = 5;
    string trace_id = 6;
}

// ========================================
// 用户和认证相关
// ========================================

message User {
    string user_id = 1;
    string auth0_id = 2;
    string email = 3;
    string name = 4;
    string organization_id = 5;
    google.protobuf.Timestamp created_at = 6;
    bool is_active = 7;
    map<string, string> metadata = 8;
}

message Organization {
    string organization_id = 1;
    string name = 2;
    string display_name = 3;
    string type = 4;
    string plan = 5;
    google.protobuf.Timestamp created_at = 6;
    bool is_active = 7;
}

// ========================================
// 认证上下文
// ========================================

message AuthContext {
    User user = 1;
    Organization organization = 2;
    repeated string permissions = 3;
    string access_token = 4;
    google.protobuf.Timestamp expires_at = 5;
    string provider = 6;
}

// ========================================
// 请求追踪
// ========================================

message RequestContext {
    string request_id = 1;
    string trace_id = 2;
    string user_id = 3;
    string organization_id = 4;
    string service_name = 5;
    string method_name = 6;
    google.protobuf.Timestamp start_time = 7;
    map<string, string> metadata = 8;
}